[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Item Management/ItemManagement.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/UITitleFont.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0509804, 0.109804, 0.247059, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.129412, 0.219608, 0.403922, 1 )

[sub_resource type="StyleBoxLine" id=3]
content_margin_top = 16.0
color = Color( 0.129412, 0.219608, 0.403922, 1 )
grow_begin = 25.0
grow_end = -25.0

[node name="Item Management" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -770.0
margin_top = -360.0
margin_right = 770.0
margin_bottom = 360.0
rect_min_size = Vector2( 1540, 720 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="ItemManagementContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleContainer" type="HBoxContainer" parent="ItemManagementContainer"]
margin_right = 1516.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="ItemManagementContainer/TitleContainer"]
margin_right = 376.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "-"

[node name="Piety" type="Label" parent="ItemManagementContainer/TitleContainer"]
margin_left = 380.0
margin_right = 756.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Piety"

[node name="Enchantment" type="Label" parent="ItemManagementContainer/TitleContainer"]
margin_left = 760.0
margin_right = 1136.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Enchantment"

[node name="Amount" type="Label" parent="ItemManagementContainer/TitleContainer"]
margin_left = 1140.0
margin_right = 1516.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Amount"

[node name="ItemManagementListScrollContainer" type="ScrollContainer" parent="ItemManagementContainer"]
margin_top = 37.0
margin_right = 1516.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 3 )

[node name="ItemManagementList" type="VBoxContainer" parent="ItemManagementContainer/ItemManagementListScrollContainer"]
margin_top = 16.0
margin_right = 1516.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_constants/separation = 0
